--- a/entropy_3D/myinterface3D/myinterface3D.vcproj
+++ b/entropy_3D/myinterface3D/myinterface3D.vcproj
@@ -73,7 +73,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="glew32.lib"
+				AdditionalDependencies="glew32.lib libshader.lib "
 				OutputFile=".\Release/myinterface.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -166,7 +166,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="glew32.lib"
+				AdditionalDependencies="glew32.lib libshader.lib "
 				OutputFile=".\Debug/myinterface.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
@@ -356,7 +356,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="glew32.lib"
+				AdditionalDependencies="glew32.lib libshader.lib "
 				OutputFile=".\Release/myinterface.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
